2015-01-27  Csaba Osztrogonác  <ossy@webkit.org>

        [Win] JSC profiler tests asserts in debug mode
        https://bugs.webkit.org/show_bug.cgi?id=140931

        Unreviewed gardening, skip failing tests.

        * profiler-test.yaml:

2014-11-04  Michael Saboff  <msaboff@apple.com>

        Disable failing v8-deltablue.js for ARM
        https://bugs.webkit.org/show_bug.cgi?id=138382

        Reviewed by Geoffrey Garen.

        This test is failing on ARM 32 bit.

        * tests/v8-v6/v8-deltablue.js:

2014-07-08  Gergo Balogh  <gbalogh.u-szeged@partner.samsung.com>

        Add option to specify output file location in sunspider.
        https://bugs.webkit.org/show_bug.cgi?id=134339

        Reviewed by Darin Adler.

        * sunspider:

2014-06-03  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>

        REGRESSION(r169092 and r169102): Skip failing JSC tests poperly on non-x86 Darwin platforms
        https://bugs.webkit.org/show_bug.cgi?id=133149

        Reviewed by Csaba Osztrogonác.

        * profiler-test.yaml: Skip profiler tests only if the architecture isn't x86 and the host is Darwin.

2014-05-21  Filip Pizlo  <fpizlo@apple.com>

        Unreviewed, roll out http://trac.webkit.org/changeset/169159.
        
        This was a unilateral change and wasn't properly reviewed.

        * profiler-test.yaml:

2014-05-19  Filip Pizlo  <fpizlo@apple.com>

        Take care of some ARM64 test failures
        https://bugs.webkit.org/show_bug.cgi?id=133090

        Reviewed by Geoffrey Garen.

        * profiler-test.yaml: Skip these on not-x86.

2014-03-14  Maciej Stachowiak  <mjs@apple.com>

        Replace "Apple Computer, Inc." with "Apple Inc." in copyright headers
        https://bugs.webkit.org/show_bug.cgi?id=130276
        <rdar://problem/16266927>

        Reviewed by Simon Fraser.

        * hosted/sunspider.html:
        * hosted/versions.html:
        * make-hosted:
        * resources/TEMPLATE.html: